--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -114,6 +114,29 @@
 		img
 			height: 236px	
 
+	// OPEN SERVICES PAGE
+
+	.form_call
+		max-width: 95%
+
+	.experience 
+		
+		.exp_txt
+			font-size: 16px
+
+	//OPEN PROJECTS PAGE
+
+	.proj_port 
+
+		.potr_itm
+			max-width: 270px 
+		
+		h4, p
+			font-size: 21px
+			line-height: 1.2
+			
+
+
 
 
 
@@ -348,6 +371,42 @@
 			
 			p
 				font-size: 20px
+
+	// OPEN SERVICES PAGE
+
+	.form_call
+		max-width: 100%
+		
+		.f_cnt
+			padding: 50px 0 40px 0
+
+		.inp_wr
+			max-width: 300px
+
+	.experience 
+		
+		.exp_txt
+			font-size: 16px
+
+	//OPEN PROJECTS PAGE
+
+	.proj_port 
+
+		.potr_itm
+			max-width: 270px 
+		
+		h4, p
+			font-size: 21px
+			line-height: 1.2
+
+	.proj_cnt_wr
+		padding: 50px 0
+
+	.proj_open
+		padding: 50px 0!important
+			
+
+	
 
 
 	
@@ -840,6 +899,7 @@
 				left: 100%
 				display: none
 
+
 	.s_type, .t_type, .fo_type
 
 		.depth1, .depth2, .depth3 
@@ -905,6 +965,49 @@
 	.serv_nav
 		width: 100%
 
+		li
+
+			a
+				font-size: 18px
+
+			img
+				left: 100%
+				padding: 5px
+				width: 24px
+
+			.wh_img
+				left: 100%
+				display: block
+
+			.main_arr
+				display: none
+				
+
+		.f_type
+
+			// .mob_wh
+			// 	display: block
+			// 	left: 100%
+
+			&.mob_list
+
+				.sub_news
+					display: block
+				
+				img
+					transform: rotate(180deg)
+					top: 0%
+
+			&.bl_mob
+				background-color: $blue
+				padding: 10px 27px 10px 16px
+
+				a
+					color: #fff
+
+					li a img
+						left: 100%
+
 	.serv_itms 
 		margin-bottom: 20px
 		
@@ -920,24 +1023,82 @@
 					height: 4px
 					width: 54px
 
+	
+	// OPEN SERVICES PAGE
 
+	.serv_open
+		padding: 50px 0 50px
 
-			
+	.serv_head
+		font-size: 24px
+		padding: 30px 0 0
 
+	.serv_cnt_desc > *
+		font-size: 18px
 
-	// 			.s_type, .t_type, .fo_type
+	.call_request
+		padding: 50px 0 70px
 
-	// .depth1, .depth2, .depth3 
-	// 	display: none
+	.form_call
+		max-width: 65%
+		
+		.f_cnt
+			padding: 50px 0 40px 0
 
-	// &:hover
+		.inp_wr
+			max-width: 330px
 
-	// 	.depth1, .depth2, .depth3
-	// 		display: block
+	.experience 
+		padding-bottom: 60px
+		justify-content: center
+		
+		.exp_txt
+			font-size: 18px
 
-	// 	.main_arr2, .main_arr3, .main_arr4 
-	// 		transform: rotate(180deg)
-	// 		top: 30%
+	.fact_img 
+		
+		img
+			margin: auto
+			display: block
+
+		//OPEN PROJECTS PAGE
+
+	.proj_port 
+		padding: 30px 0 0
+		flex-direction: column
+		max-width: 95%
+
+		.potr_itm
+			max-width: 330px 
+		
+		h4, p
+			font-size: 21px
+			line-height: 1.4
+
+	.proj_cnt_top 
+		
+		h2
+			font-size: 24px
+
+	.proj_cnt_wr
+		padding: 20px 0 0px
+
+	.proj_open
+		padding: 50px 0!important
+
+		.container.bread
+			padding: 0
+
+	.proj_cnt_desc 
+		
+		p
+			font-size: 18px
+
+	// .r_port, .l_port
+	// 	flex-direction: column
+
+	.l_port
+		margin-bottom: 30px
 
 
 @media screen and (max-device-width: 768px) and (min-device-width: 570px)
@@ -1537,6 +1698,140 @@
 				&::after
 					height: 4px
 					width: 54px
+
+		
+	// OPEN SERVICES PAGE
+
+	.breadcrumbs 
+		display: block
+
+		li
+			display: inline-block
+
+	.serv_open
+		padding: 50px 0 50px
+
+		.breadcrumbs 
+			padding: 0 15px
+
+	.serv_head
+		font-size: 24px
+		padding: 30px 0 0
+
+	.serv_cnt_desc 
+		> 
+			*
+				font-size: 16px
+		
+		p
+			margin: 20px 0
+
+	.call_request
+		padding: 50px 0 70px
+
+	.form_call
+		max-width: 80%
+		
+		.f_cnt
+			padding: 50px 0 40px 0
+
+		.inp_wr
+			max-width: 330px
+
+	.experience 
+		padding-bottom: 60px
+		justify-content: center
+	
+		.exp
+			padding: 0 5px
+		
+		.exp_txt
+			font-size: 17px
+
+	.fact_img 
+		margin-top: 40px
+		
+		img
+			margin: auto
+			display: block
+
+		// OPEN SERVICES PAGE
+
+	.serv_open
+		padding: 50px 0 50px
+
+	.serv_head
+		font-size: 24px
+		padding: 30px 0 0
+
+	.serv_cnt_desc > *
+		font-size: 18px
+
+	.call_request
+		padding: 50px 0 70px
+
+	.form_call
+		max-width: 65%
+		
+		.f_cnt
+			padding: 50px 0 40px 0
+
+		.inp_wr
+			max-width: 330px
+
+	.experience 
+		padding-bottom: 60px
+		justify-content: center
+		
+		.exp_txt
+			font-size: 18px
+
+	.fact_img 
+		
+		img
+			margin: auto
+			display: block
+
+		//OPEN PROJECTS PAGE
+
+	.proj_port 
+		padding: 30px 0 0
+		flex-direction: column
+		max-width: 95%
+
+		.potr_itm
+			max-width: 330px 
+		
+		h4, p
+			font-size: 21px
+			line-height: 1.2
+
+	.proj_cnt_top 
+		
+		h2
+			font-size: 24px
+
+	.proj_cnt_wr
+		padding: 20px 0 0px
+
+	.proj_open
+		padding: 50px 0!important
+
+		.container.bread
+			padding: 0
+
+
+	.proj_cnt_desc 
+		
+		p
+			font-size: 18px
+
+	// .r_port, .l_port
+	// 	flex-direction: column
+
+	.l_port
+		margin-bottom: 30px
+		
 	
 
 @media screen and (max-device-width: 570px) and (min-device-width: 320px)
@@ -2255,3 +2550,126 @@
 
 	.main_services
 		padding: 20px 0 50px
+
+	// OPEN SERVICES PAGE
+
+	
+	.serv_open
+		padding: 50px 0 50px
+
+		.breadcrumbs
+			padding: 0 15px 
+
+			li a
+				font-size: 14px
+
+		// .response_cl
+		// 	padding: 0 15px
+
+	.serv_head
+		font-size: 22px
+		padding: 20px 0 0
+		line-height: 1.2
+
+	.serv_cnt_desc 
+		> 
+			*
+				font-size: 16px
+		
+		p
+			margin: 20px 0
+
+	.call_request
+		padding: 50px 0 70px
+
+	.form_call
+		max-width: 100%
+
+		input, textarea
+			font-size: 14px
+
+		.button
+			font-size: 18px
+			padding: 10px 0
+			margin: 15px 0 10px
+
+		.f_top 
+			
+			p
+				font-size: 16px
+				margin: 0 20px 0px 0
+
+			img
+				width: 50px
+		
+		.f_cnt
+			padding: 50px 0 40px 0
+
+		.inp_wr
+			max-width: 230px
+
+	.experience 
+		padding-bottom: 60px
+		justify-content: center
+
+		.exp_descr
+			flex-direction: column
+	
+		.exp
+			padding: 0 30px
+		
+		.exp_txt
+			font-size: 18px
+
+	.fact_img 
+		margin-top: 40px
+		
+		img
+			margin: auto
+			display: block
+
+	//OPEN PROJECTS PAGE
+
+	.proj_port 
+		padding: 30px 0 0
+		flex-direction: column
+		// max-width: 100%
+
+		.potr_itm
+			max-width: 150px
+			// padding: 0 20px
+		
+		h4, p
+			font-size: 16px
+			line-height: 1.2
+
+		
+
+	.proj_cnt_top 
+		
+		h2
+			font-size: 24px
+			line-height: 1.3
+
+	.proj_cnt_wr
+		padding: 20px 0 0px
+
+	.proj_open
+		padding: 50px 0!important
+
+		.container.bread
+			padding: 0
+
+
+	.proj_cnt_desc 
+		
+		p
+			font-size: 16px
+			padding: 15px 0 0
+
+	.r_port, .l_port
+		// flex-direction: column
+		justify-content: space-between
+
+	.l_port
+		margin-bottom: 30px
