--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1909,9 +1909,11 @@ html.mm-wrapper_opened
 	
 		img
 			transition: all .3s ease
-			width: 12px
+			z-index: 20
+			width: 30px
 			position: absolute
-			left: -20px
+			padding: 8px
+			left: -30px
 			top: 50%
 			transform: translateY(-50%)
 
@@ -1936,7 +1938,7 @@ html.mm-wrapper_opened
 
 			.main_arr
 				transform: rotate(180deg)
-				top: 10%
+				top: -30%
 
 			.sub_news
 				display: block
@@ -1947,27 +1949,64 @@ html.mm-wrapper_opened
 
 		.depth5, .depth6, .depth7
 			display: none
+
+
+.depth5
+
+	&.show
+		display: block!important
+
+.main_arr5
 	
-	.six_type
+	&.arr_rev
+		transform: rotate(180deg)
+		top: -30%
 
-		&:hover
+.depth6
 
-			.depth5
-				display: block
+	&.show
+		display: block!important
 
-	.sev_type
+.main_arr6
+	
+	&.arr_rev
+		transform: rotate(180deg)
+		top: -30%
 
-		&:hover
+.depth7
 
-			.depth6
-				display: block
+	&.show
+		display: block!important
 
-	.eigh_type
+.main_arr7
+	
+	&.arr_rev
+		transform: rotate(180deg)
+		top: -30%
+		
 
-		&:hover
 
-			.depth7
-				display: block
+		
+	// .six_type
+
+	// 	&:hover
+
+	// 		.depth5
+	// 			display: block
+
+	// .sev_type
+
+	// 	&:hover
+
+	// 		.depth6
+	// 			display: block
+
+	// .eigh_type
+
+	// 	&:hover
+
+	// 		.depth7
+	// 			display: block
 
 
 
@@ -2103,7 +2142,7 @@ html.mm-wrapper_opened
 
 .serv_head
 	font-size: 36px
-	@include MyrMed()
+	@include MyrBold()
 	padding: 50px 0 0
 
 .serv_cnt_desc
@@ -2129,7 +2168,17 @@ html.mm-wrapper_opened
 	padding: 100px 0
 
 .form_call
-	max-width: 70%
+	max-width: 65%
+	width: 100%
+	background-color: #ffffff
+	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25)
+	position: relative
+
+	&.form_success
+		background-color: $blue
+
+	.f_wr
+		// display: none
 
 	.f_top
 		width: 100%
@@ -2137,12 +2186,71 @@ html.mm-wrapper_opened
 		padding: 15px 20px	
 		display: flex
 		align-items: center
+		justify-content: space-between
 
 		img
 			width: 70px
 
 		p
+			color: #fff
+			font-size: 20px
 			text-transform: uppercase
+			margin: 0 80px 0 0
+
+	.f_cnt
+		padding: 50px 0 60px 0
+		display: flex
+		flex-direction: column
+		align-items: center
+
+
+	input, textarea
+		width: 100%
+		max-width: 330px
+		outline: none
+		border: none
+		border-bottom: 2px solid #c4c4c4
+		padding: 0 0 5px 20px
+		display: block
+		color: $text
+		font-size: 18px
+
+		&::placeholder
+			color: $text
+
+	.button
+		box-shadow: 0 0px 20px rgba(21,77,164,.25)
+		color: #fff
+		max-width: 210px
+		padding: 15px 0
+		border-bottom: none
+		margin-bottom: 20px
+		margin-top: 30px
+
+	.inp_wr
+		max-width: 330px
+		width: 100%
+		position: relative
+		margin-bottom: 30px
+
+.effect-2
+	border: 0
+	padding: 7px 0
+	border-bottom: 1px solid #ccc
+
+.effect-2 ~ .focus-border
+	position: absolute
+	bottom: 0
+	left: 50%
+	width: 0
+	height: 2px
+	background-color: #3399FF
+	transition: 0.4s
+
+.effect-2:focus ~ .focus-border
+	width: 100%
+	transition: 0.4s
+	left: 0
 
 
 
@@ -2170,9 +2278,130 @@ html.mm-wrapper_opened
 
 	img
 		max-width: 100%
+
+.success
+	display: none
+	// display: flex
+	justify-content: center
+	flex-direction: column
+	align-items: center
+	text-align: center
+	position: relative
+	top: 50%
+	transform: translateY(-50%)
+	color: #fff
+
+	i
+		font-size: 70px
 		
+	p
+		text-shadow: 0 1px 0 rgba(#fff, .2), 0 2px 0 rgba(#fff, .3)
+		@include MyrMed()
+		line-height: 1.4
+		font-size: 20px
+		max-width: 320px
+
+		&:nth-of-type(1)
+			font-size: 23px
+			margin-top: 20px
+			margin-bottom: 10px
+
+
+// Project Open page
+
+
+.proj_cnt_wr
+	padding: 70px 0 50px
+
+.proj_cnt_top
+
+	h2
+		font-size: 36px
+		@include MyrBold()
+
+	p
+		font-size: 18px
+
+.proj_cnt_desc
+	padding: 35px 0 70px
+
+	p
+		font-size: 21px
+		margin: 0
+		padding: 30px 0 0
+		line-height: 1.4
+
+
+.proj_cnt_itm
+	margin-bottom: 30px
+
+	img
+		width: 100%
+		max-width: 100%
+		display: block
+		height: auto
+
+.proj_port
+	padding: 60px 0 0
+	display: flex
+	// justify-content: space-between
+	width: 100%
+
+	.potr_itm
+		max-width: 330px
+		width: 100%
+
+	h4
+		font-size: 24px
+		color: $blue
+		@include MyrMed()
+
+	p
+		@include MyrLight()
+		font-size: 24px
+		line-height: 1.4
+
+.r_port, .l_port
+	display: flex
+	justify-content: space-between
+	width: 100%
+
+
+// CONTACT PAGE
+
+.map
+	width: 100% 
+	height: 756px
+	
 
 		
+		
+
+
+/** MASK INVALID **/
+.incomplete
+  animation: invalid 1s linear infinite
+  -webkit-animation: invalid 1s linear infinite
+  -moz-animation: invalid 1s linear infinite
+  -o-animation: invalid 1s linear infinite
+
+
+@-webkit-keyframes invalid
+  0%
+    border-bottom: 2px solid #FFF
+  50%
+    border-bottom: 2px solid red
+  100%
+    border-bottom: 2px solid #FFF
+
+@keyframes invalid
+  0%
+    border-bottom: 2px solid #FFF
+  50%
+    border-bottom: 2px solid red
+  100%
+    border-bottom: 2px solid #FFF
+ 
 
 
 
