style Contacts page and fix left side menu

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -11,4 +11,5 @@
 @import "../libs/magnific-popup/magnific-popup.css"
 @import "../libs/fancybox/jquery.fancybox.min.css"
 @import "../libs/aos/aos.css"
+@import "../libs/wickedcss/wickedcss.min.css"
 
