--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,9 +2,7 @@
 $fa-font-path: "../libs/font-awesome/web-fonts-with-css/webfonts"
 
 $text: #000
-$blue: #154DA4
-$grey: #ECEEF1
-$greyDarker: #F2F2F2
+$blue: #203371
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
