--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -148,6 +148,7 @@ body
 			color: rgba(#fff, .5)
 			padding: 6px 
 			font-size: 12px
+			box-sizing: border-box
 			transition: all .3s ease
 
 			&:hover
