--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -660,6 +660,22 @@
 
       img
         max-width: 100%
+
+
+  // FORM
+
+  .form_wr
+    padding: 50px
+
+  .input_block
+    padding: 0px 0 0
+
+    .button
+      margin-top: 40px
+
+  .input_block input[type=email], .input_block input[type=tel], .input_block input[type=text], .input_block textarea
+    margin: 20px 0 10px
+
            
 
 
@@ -668,6 +684,20 @@
 
 
 @media screen and (max-device-width: 768px) and (min-device-width: 570px)
+
+  // FORM
+
+  .form_wr
+    padding: 50px
+
+  .input_block
+    padding: 0px 0 0
+
+    .button
+      margin-top: 40px
+
+  .input_block input[type=email], .input_block input[type=tel], .input_block input[type=text], .input_block textarea
+    margin: 20px 0 10px
 
   .response_cl
     padding: 0 15px
@@ -982,6 +1012,32 @@
       
 
 @media screen and (max-device-width: 570px) and (min-device-width: 320px)
+
+  // FORM
+
+  .form_wr
+    padding: 50px 20px
+    max-width: 280px
+
+  .forms 
+    
+    h2
+      font-size: 20px
+      line-height: 1.3
+
+    p
+      font-size: 12px
+
+  .input_block
+    padding: 0px 0 0
+
+    .button
+      margin-top: 20px
+      font-size: 16px
+
+  .input_block input[type=email], .input_block input[type=tel], .input_block input[type=text], .input_block textarea
+    margin: 10px 0 10px
+    font-size: 12px
 
   .s_pad
     padding: 50px 0
