--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -950,6 +950,14 @@ body
 		@include MontBold()
 
 
+.all_num
+	position: relative
+	top: 50%
+	transform: translateY(-50%)
+
+	.itm_bot
+		margin: auto
+
 .cont_mob
 	padding: 0
 
@@ -1273,6 +1281,267 @@ body
 
 		&:hover
 			opacity: 1
+
+
+// POPUPS
+
+.form_wr
+	width: 100%
+	// display: none
+	background-color: #fff
+	z-index: 9999
+	max-width: 510px
+	position: fixed
+	left: 50%
+	top: 50%
+	transform: translate(-50%, -50%) 
+	padding: 90px
+	box-sizing: border-box
+
+	&::after
+		background-image: url('../img/popup-img.png')
+		content: ''
+		width: 230px
+		display: block
+		height: 230px
+		top: 50%
+		left: 50%
+		position: absolute
+		transform: translate(-50%, -50%)
+		background-size: cover
+		background-position: center
+
+.forms
+	// display: none
+
+	h2
+		// max-width: 233px
+		font-size: 24px
+		text-align: center
+		@include MontBold()
+		color: $blue
+		margin-bottom: 20px
+
+	p
+		text-align: center
+		font-size: 14px
+		color: $text
+
+.input_block
+	padding: 50px 0 0
+	display: flex
+	flex-direction: column
+	align-items: center
+	position: relative
+	z-index: 20
+
+	input[type=text], textarea, input[type=tel], input[type=email]
+		background: transparent
+		max-width: 330px
+		width: 100%
+		color: $text
+		font-size: 14px
+		padding: 0px 0 10px 40px
+		border: none
+		outline: none
+		border-bottom: 1px solid $text
+		margin: 20px 0
+
+	.button
+		max-width: 330px
+		border: none
+		cursor: pointer
+		margin-top: 60px
+
+.succes_pop
+	display: none
+	text-align: center
+	
+	h3
+		font-size: 30px
+		margin-bottom: 20px
+		text-shadow: 1px 1px 2px rgba($blue, .5), 2px 2px 2px rgba($blue, .5) 
+
+
+.mfp-close-btn-in .mfp-close
+	outline: none
+	font-size: 40px
+	right: 10px
+	top: 10px
+	
+
+
+/*** RADIO CUSTOM ****/ 
+		
+.radio-wrap
+	padding: 20px 0 0
+	display: flex
+	max-width: 260px
+	width: 100%
+	justify-content: space-between
+
+	label
+		display: flex
+		margin: 0
+
+	.form_soc
+		display: flex
+		position: relative
+		line-height: 1.3
+
+		.form_img
+			padding-left: 8px
+
+		path
+			fill: $blue
+
+
+.radio * 
+	cursor: pointer
+
+
+.radio input 
+	opacity: 0
+
+
+.radio span 
+	position: relative
+	display: inline-block
+	margin-left: -25px
+	vertical-align: top
+	width: 20px
+	height: 20px
+	border-radius: 2px
+	border: 2px solid $blue
+	//box-shadow: 4px 0px 22px 0px rgba(0, 0, 0, 0.12);
+
+.radio:hover span 
+	border-color: $blue
+
+.radio span:before 
+	content: "" 
+	position: absolute
+	top: 1px
+	left: 0 
+	right: 0 
+	bottom: 0
+	opacity: 0
+	text-align: center
+	font-size: 10px
+	line-height: 10px
+	vertical-align: middle
+	color: #ccc
+
+.radio 
+	span:after 
+		content: ''
+		width: 8px
+		height: 8px
+		background-color: transparent
+		position: absolute
+		right: 3px
+		top: 3px
+		border-radius: 50%
+		z-index: 2
+
+/* override for radio */
+.radio span 
+	border-radius: 50%
+	margin-right: 5px
+
+.radio span:before 
+	z-index: 3
+	content: ""
+	width: 10px
+	height: 10px
+	margin: 2px auto
+	border-radius: 100px
+
+.radio input[type=radio]:checked + span 
+	background-color: #fff
+
+.radio input[type=radio]:checked + span:before 
+	background-color: $blue
+	color: $blue
+	opacity: 1
+	transition: color .3s ease-out
+
+.radio_wrap
+	display: flex
+
+.radio
+	display: flex
+	.label
+		display: flex
+
+		
+
+
+
+
+
+/**
+ * Fade-zoom animation for first dialog
+ */
+
+/* start state */
+.my-mfp-zoom-in .zoom-anim-dialog
+	opacity: 0
+
+	-webkit-transition: all 0.2s ease-in-out
+	-moz-transition: all 0.2s ease-in-out
+	-o-transition: all 0.2s ease-in-out
+	transition: all 0.2s ease-in-out
+
+
+
+	-webkit-transform: scale(0.8)
+	-moz-transform: scale(0.8)
+	-ms-transform: scale(0.8)
+	-o-transform: scale(0.8)
+	transform: scale(0.8)
+
+
+/* animate in */
+.my-mfp-zoom-in.mfp-ready .zoom-anim-dialog
+	opacity: 1
+
+	-webkit-transform: scale(1)
+	-moz-transform: scale(1)
+	-ms-transform: scale(1)
+	-o-transform: scale(1)
+	transform: scale(1)
+
+
+/* animate out */
+.my-mfp-zoom-in.mfp-removing .zoom-anim-dialog
+	-webkit-transform: scale(0.8)
+	-moz-transform: scale(0.8)
+	-ms-transform: scale(0.8)
+	-o-transform: scale(0.8)
+	transform: scale(0.8)
+
+	opacity: 0
+
+
+/* Dark overlay, start state */
+.my-mfp-zoom-in.mfp-bg
+	opacity: 0
+	-webkit-transition: opacity 0.3s ease-out
+	-moz-transition: opacity 0.3s ease-out
+	-o-transition: opacity 0.3s ease-out
+	transition: opacity 0.3s ease-out
+
+/* animate in */
+.my-mfp-zoom-in.mfp-ready.mfp-bg
+	opacity: 0.8
+
+/* animate out */
+.my-mfp-zoom-in.mfp-removing.mfp-bg
+	opacity: 0
+
+
+
 
 
 
